--- a/index.html
+++ b/index.html
@@ -24,103 +24,103 @@
         <div class="hour">20:00</div>
         <div class="hour">21:00</div>
         <div class="day monday">Пн</div>
-        <div class="monday9 "></div>
-        <div class="monday10"></div>
-        <div class="monday11"></div>
-        <div class="monday12"></div>
-        <div class="monday13"></div>
-        <div class="monday14"></div>
-        <div class="monday15"></div>
-        <div class="monday16"></div>
-        <div class="monday17"></div>
-        <div class="monday18"></div>
-        <div class="monday19"></div>
-        <div class="monday20"></div>
-        <div class="monday21"></div>
+        <div class="monday monday9 "></div>
+        <div class="monday monday10"></div>
+        <div class="monday monday11"></div>
+        <div class="monday monday12"></div>
+        <div class="monday monday13"></div>
+        <div class="monday monday14"></div>
+        <div class="monday monday15"></div>
+        <div class="monday monday16"></div>
+        <div class="monday monday17"></div>
+        <div class="monday monday18"></div>
+        <div class="monday monday19"></div>
+        <div class="monday monday20"></div>
+        <div class="monday monday21"></div>
         <div class="day tuesday">Вт</div>
-        <div class="tuesday9 "></div>
-        <div class="tuesday10"></div>
-        <div class="tuesday11"></div>
-        <div class="tuesday12"></div>
-        <div class="tuesday13"></div>
-        <div class="tuesday14"></div>
-        <div class="tuesday15"></div>
-        <div class="tuesday16"></div>
-        <div class="tuesday17"></div>
-        <div class="tuesday18"></div>
-        <div class="tuesday19"></div>
-        <div class="tuesday20"></div>
-        <div class="tuesday21"></div>
+        <div class="tuesday tuesday9 "></div>
+        <div class="tuesday tuesday10"></div>
+        <div class="tuesday tuesday11"></div>
+        <div class="tuesday tuesday12"></div>
+        <div class="tuesday tuesday13"></div>
+        <div class="tuesday tuesday14"></div>
+        <div class="tuesday tuesday15"></div>
+        <div class="tuesday tuesday16"></div>
+        <div class="tuesday tuesday17"></div>
+        <div class="tuesday tuesday18"></div>
+        <div class="tuesday tuesday19"></div>
+        <div class="tuesday tuesday20"></div>
+        <div class="tuesday tuesday21"></div>
         <div class="day wednesday">Ср</div>
-        <div class="wednesday9 "></div>
-        <div class="wednesday10"></div>
-        <div class="wednesday11"></div>
-        <div class="wednesday12"></div>
-        <div class="wednesday13"></div>
-        <div class="wednesday14"></div>
-        <div class="wednesday15"></div>
-        <div class="wednesday16"></div>
-        <div class="wednesday17"></div>
-        <div class="wednesday18"></div>
-        <div class="wednesday19"></div>
-        <div class="wednesday20"></div>
-        <div class="wednesday21"></div>
+        <div class="wednesday wednesday9 "></div>
+        <div class="wednesday wednesday10"></div>
+        <div class="wednesday wednesday11"></div>
+        <div class="wednesday wednesday12"></div>
+        <div class="wednesday wednesday13"></div>
+        <div class="wednesday wednesday14"></div>
+        <div class="wednesday wednesday15"></div>
+        <div class="wednesday wednesday16"></div>
+        <div class="wednesday wednesday17"></div>
+        <div class="wednesday wednesday18"></div>
+        <div class="wednesday wednesday19"></div>
+        <div class="wednesday wednesday20"></div>
+        <div class="wednesday wednesday21"></div>
         <div class="day thursday">Чт</div>
-        <div class="thursday9 "></div>
-        <div class="thursday10"></div>
-        <div class="thursday11"></div>
-        <div class="thursday12"></div>
-        <div class="thursday13"></div>
-        <div class="thursday14"></div>
-        <div class="thursday15"></div>
-        <div class="thursday16"></div>
-        <div class="thursday17"></div>
-        <div class="thursday18"></div>
-        <div class="thursday19"></div>
-        <div class="thursday20"></div>
-        <div class="thursday21"></div>
+        <div class="thursday thursday9 "></div>
+        <div class="thursday thursday10"></div>
+        <div class="thursday thursday11"></div>
+        <div class="thursday thursday12"></div>
+        <div class="thursday thursday13"></div>
+        <div class="thursday thursday14"></div>
+        <div class="thursday thursday15"></div>
+        <div class="thursday thursday16"></div>
+        <div class="thursday thursday17"></div>
+        <div class="thursday thursday18"></div>
+        <div class="thursday thursday19"></div>
+        <div class="thursday thursday20"></div>
+        <div class="thursday thursday21"></div>
         <div class="day friday">Пт</div>
-        <div class="friday9 "></div>
-        <div class="friday10"></div>
-        <div class="friday11"></div>
-        <div class="friday12"></div>
-        <div class="friday13"></div>
-        <div class="friday14"></div>
-        <div class="friday15"></div>
-        <div class="friday16"></div>
-        <div class="friday17"></div>
-        <div class="friday18"></div>
-        <div class="friday19"></div>
-        <div class="friday20"></div>
-        <div class="friday21"></div>
+        <div class="friday friday9 "></div>
+        <div class="friday friday10"></div>
+        <div class="friday friday11"></div>
+        <div class="friday friday12"></div>
+        <div class="friday friday13"></div>
+        <div class="friday friday14"></div>
+        <div class="friday friday15"></div>
+        <div class="friday friday16"></div>
+        <div class="friday friday17"></div>
+        <div class="friday friday18"></div>
+        <div class="friday friday19"></div>
+        <div class="friday friday20"></div>
+        <div class="friday friday21"></div>
         <div class="day saturday">Сб</div>
-        <div class="saturday9 "></div>
-        <div class="saturday10"></div>
-        <div class="saturday11"></div>
-        <div class="saturday12"></div>
-        <div class="saturday13"></div>
-        <div class="saturday14"></div>
-        <div class="saturday15"></div>
-        <div class="saturday16"></div>
-        <div class="saturday17"></div>
-        <div class="saturday18"></div>
-        <div class="saturday19"></div>
-        <div class="saturday20"></div>
-        <div class="saturday21"></div>
+        <div class="saturday saturday9 "></div>
+        <div class="saturday saturday10"></div>
+        <div class="saturday saturday11"></div>
+        <div class="saturday saturday12"></div>
+        <div class="saturday saturday13"></div>
+        <div class="saturday saturday14"></div>
+        <div class="saturday saturday15"></div>
+        <div class="saturday saturday16"></div>
+        <div class="saturday saturday17"></div>
+        <div class="saturday saturday18"></div>
+        <div class="saturday saturday19"></div>
+        <div class="saturday saturday20"></div>
+        <div class="saturday saturday21"></div>
         <div class="day sunday">Вс</div>
-        <div class="sunday9 "></div>
-        <div class="sunday10""></div>
-        <div class="sunday11"></div>
-        <div class="sunday12"></div>
-        <div class="sunday13"></div>
-        <div class="sunday14"></div>
-        <div class="sunday15"></div>
-        <div class="sunday16"></div>
-        <div class="sunday17"></div>
-        <div class="sunday18"></div>
-        <div class="sunday19"></div>
-        <div class="sunday20"></div>
-        <div class="sunday21"></div>
+        <div class="sunday sunday9"></div>
+        <div class="sunday sunday10""></div>
+        <div class="sunday sunday11"></div>
+        <div class="sunday sunday12"></div>
+        <div class="sunday sunday13"></div>
+        <div class="sunday sunday14"></div>
+        <div class="sunday sunday15"></div>
+        <div class="sunday sunday16"></div>
+        <div class="sunday sunday17"></div>
+        <div class="sunday sunday18"></div>
+        <div class="sunday sunday19"></div>
+        <div class="sunday sunday20"></div>
+        <div class="sunday sunday21"></div>
 </section>
 <section id="search">
     <input id = "name" type="text" placeholder="Введите название">
